src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@error.xml.snap
---
source: src/raw_upload.rs
expression: e.to_string()
input_file: tests/error.xml
---
"Error parsing JUnit XML in /Users/josephsawaya/dev/codecov/test-results-parser/tests/error.xml at 8:24"
