src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@jest-junit.xml.snap
---
source: src/raw_upload.rs
expression: parse_raw_upload(&upload_json).unwrap().0
input_file: tests/jest-junit.xml
---
- framework: Jest
  testruns:
    - name: Title when rendered renders pull title
      classname: Title when rendered renders pull title
      duration: 0.036
      outcome: pass
      testsuite: Title
      failure_message: ~
      filename: ~
      build_url: ~
      computed_name: Title when rendered renders pull title
    - name: Title when rendered renders pull author
      classname: Title when rendered renders pull author
      duration: 0.005
      outcome: pass
      testsuite: Title
      failure_message: ~
      filename: ~
      build_url: ~
      computed_name: Title when rendered renders pull author
    - name: Title when rendered renders pull updatestamp
      classname: Title when rendered renders pull updatestamp
      duration: 0.002
      outcome: pass
      testsuite: Title
      failure_message: ~
      filename: ~
      build_url: ~
      computed_name: Title when rendered renders pull updatestamp
    - name: Title when rendered for first pull request renders pull title
      classname: Title when rendered for first pull request renders pull title
      duration: 0.006
      outcome: pass
      testsuite: Title
      failure_message: ~
      filename: ~
      build_url: ~
      computed_name: Title when rendered for first pull request renders pull title
