src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@no-time.xml.snap
---
source: src/raw_upload.rs
expression: parse_raw_upload(&upload_json).unwrap().0
input_file: tests/no-time.xml
---
- framework: PHPUnit
  testruns:
    - name: test1
      classname: class.className
      duration: ~
      outcome: pass
      testsuite: Thing
      failure_message: ~
      filename: /file1.php
      build_url: ~
      computed_name: "class.className::test1"
    - name: test2
      classname: ""
      duration: ~
      outcome: pass
      testsuite: Thing
      failure_message: ~
      filename: /file1.php
      build_url: ~
      computed_name: "::test2"
