src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@skip-error.junit.xml.snap
---
source: src/raw_upload.rs
expression: parse_raw_upload(&upload_json).unwrap().0
input_file: tests/skip-error.junit.xml
---
- framework: Pytest
  testruns:
    - name: test_subtract
      classname: tests.test_math.TestMath
      duration: 0.1
      outcome: error
      testsuite: pytest
      failure_message: hello world
      filename: ~
      build_url: ~
      computed_name: "tests.test_math.TestMath::test_subtract"
    - name: test_multiply
      classname: tests.test_math.TestMath
      duration: 0.1
      outcome: error
      testsuite: pytest
      failure_message: ~
      filename: ~
      build_url: ~
      computed_name: "tests.test_math.TestMath::test_multiply"
    - name: test_add
      classname: tests.test_math.TestMath
      duration: 0.1
      outcome: skip
      testsuite: pytest
      failure_message: ~
      filename: ~
      build_url: ~
      computed_name: "tests.test_math.TestMath::test_add"
