src/snapshots/test_results_parser__raw_upload__tests__parse_raw_upload_success@testsuites.xml.snap
---
source: src/raw_upload.rs
expression: parse_raw_upload(&upload_json).unwrap().0
input_file: tests/testsuites.xml
---
- framework: ~
  testruns: []
